changed a very very small typo, 1 letter

--- a/recipe-page-main/styles.css
+++ b/recipe-page-main/styles.css
@@ -115,6 +115,7 @@ article {
     color: var(--Dark-Raspberry);
     font-weight: 700;
     margin-bottom: 1rem;
+    font-size: 1.25rem;
   }
   li {
     color: var(--Wenge-Brown);
