--- a/recipe-page-main/styles.css
+++ b/recipe-page-main/styles.css
@@ -128,7 +128,6 @@ article {
   span {
     font-weight: 700;
     display: inline-block;
- 
   }
 }
 
@@ -199,10 +198,25 @@ hr {
   }
   td:nth-child(1) {
     color: var(--Wenge-Brown);
-   padding-left: 3ch;
+    padding-left: 3ch;
   }
   td:nth-child(2) {
     color: var(--Nutmeg);
     font-weight: 700;
+  }
+}
+
+@media (max-width: 29.125em) {
+  body {
+    padding: 0;
+  }
+  main {
+    border-radius: 0;
+  }
+  img {
+    max-width: calc(100% + 4rem) !important;
+    margin-left: -2rem !important;
+    margin-top: -2rem !important;
+    border-radius: 0px !important;
   }
 }
